force-app/main/default/objects/Mortgage_Product__c/Mortgage_Product__c.object-meta.xml
<CustomObject>
    <label>Mortgage Product</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Mortgage Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mortgage Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>