force-app/main/default/objects/Mortgage_Product__c/fields/Caps__c.field-meta.xml
<CustomField>
    <fullName>Caps__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Caps</label>
    <length>15</length>
    <type>Text</type>
</CustomField>