force-app/main/default/objects/Mortgage_Product__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Govt - FHA</fullName>
            </value>
            <value>
                <fullName>Govt - VA</fullName>
            </value>
            <value>
                <fullName>Govt - USDA</fullName>
            </value>
            <value>
                <fullName>Service Release</fullName>
            </value>
            <value>
                <fullName>Bond Loan</fullName>
            </value>
            <value>
                <fullName>Portfolio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>